<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="allclear_button">AC</string>
    <string name="clear_button">C</string>
    <string name="addition_button">+/-</string>
    <string name="percentage_button">%</string>
    <string name="division_button">/</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="multiplication_button">*</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="minus_button">-</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="plus_button">+</string>
    <string name="zero_button">0</string>
    <string name="dot_button">.</string>
    <string name="equalto_button">=</string>


</resources>
