<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:gravity="bottom"
              android:padding="10dp"
              android:orientation="vertical">
    <TextView
        android:id="@+id/calc_display"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="50sp"
        android:gravity="end"
        android:text="@string/zero_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/allclear_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/allclear_button"
            android:background="#CCCCCC"/>
        <Button
            android:id="@+id/sign_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/addition_button"
            android:background="#CCCCCC"/>
        <Button
            android:id="@+id/percentage_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/percentage_button"
            android:background="#CCCCCC"/>
        <Button
            android:id="@+id/division_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/division_button"
            android:textColor="#FFFFFF"
            android:background="#FFA500"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/seven_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/eight_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/eight_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/nine_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nine_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/multiplication_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/multiplication_button"
            android:background="#FFA500"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/four_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/five_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/five_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/six_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/six_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/minus_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/minus_button"
            android:textColor="#FFFFFF"
            android:background="#FFA500"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/one_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/two_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/two_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/three_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/three_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/plus_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/plus_button"
            android:textColor="#FFFFFF"
            android:background="#FFA500"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero_button"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/zero_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/dot_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dot_button"
            android:background="#FFFFFF"/>
        <Button
            android:id="@+id/equalto_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/equalto_button"
            android:textColor="#FFFFFF"
            android:background="#FFA500"
            />
    </LinearLayout>
</LinearLayout>